# tradeortighten

./: CLAUDE.md  README.md
OrderBook/: CMakeLists.txt  TODO.md
OrderBook/src/: id_generator.cpp  id_generator.h  main.cpp  order_book.cpp  order_book.h  price_level.cpp  price_level.h  print_utils.cpp  print_utils.h
OrderBook/src/types/: order.h  trade.h  types.h
OrderBook/tests/: order_book_tests.cpp  rr_order_book_tests.cpp
backend/: bridge_engine.ts  client-test.html  package.json  readme.md  server.ts  tsconfig.json
backend/src/: db.ts  server.ts
backend/src/client_logic/: client_types.ts  supabase.ts
backend/src/client_logic/migrations/: 001_init.sql  002_place_taker_order_fn.sql  003_update_taker_order_fn.sql  004_update_maker_order_fn.sql  005_initial_load_fns.sql  006_close_order_fn.sql  007_leaderboard_fn.sql  migrations_outline.md
backend/src/handlers/: admin_handler.ts  cancel_order.ts  initial_load_handler.ts  place_handler.ts
backend/src/lib/: connection_manager.ts  leaderboard.ts  order_utils.ts  priceHistory.ts  trading_state.ts
backend/src/order_book_engine/: bridge_engine.ts  engine_types.ts
backend/test_scripts/: resetDB.sh  reset_and_seed.sh
frontend/: package-lock.json  package.json  pnpm-lock.yaml  ui.README.md
frontend/app/: SignInPage.tsx  TradingCompetitionUI.jsx  page.tsx
frontend/app/admin/: AdminPanel.jsx  page.tsx
frontend/app/components/: AdminPanel.jsx  InboxPanel.jsx  LeaderboardPanel.jsx  OpenOrdersPanel.jsx  PortfolioPanel.jsx  SecurityQuadrant.jsx
frontend/app/trade/: page.tsx
frontend/app/trade/components/: AdminPanel.jsx  LeaderboardPanel.jsx  OpenOrdersPanel.jsx  PageHeader.tsx  PortfolioPanel.jsx  SecurityQuadrant.jsx
frontend/app/view/: page.tsx
frontend/lib/: checkBackend.ts  securities.ts  useBackendStatus.ts
temp_frontend/: ui.jsx
